--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgb(228, 228, 228);
 }
 
 .container {
@@ -40,7 +41,8 @@ li {
   height: 400px;
   margin: 50px;
   border-radius: 15px;
-  background-color: aquamarine;
+  background-color: rgb(255, 255, 255, 0.2);
+  box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2);
   padding: 30px;
 }
 
@@ -52,25 +54,18 @@ li {
   gap: 30px;
 }
 
-.reset-button {
-  width: 100%;
-  height: 30px;
-  border-radius: 4px;
-  font-weight: bold;
-  background-color: azure;
-  cursor: pointer;
-}
-
 .button {
-  background-color: azure;
-  width: 50px;
-  height: 50px;
-  font-size: 30px;
-  border: 0;
+  background-color: rgba(255, 255, 255, 0.14);
+  box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2);
+  color: rgb(74, 68, 68);
+  width: 80px;
+  height: 80px;
+  font-size: 50px;
+  border: none;
   border-radius: 10px;
   cursor: pointer;
 }
 
 .counter {
-  font-size: 50px;
+  font-size: 80px;
 }
